// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render without value 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #00000040;
  border-radius: 8px;
  background-color: #ffffff;
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 500px;
}

.c2 {
  box-sizing: border-box;
  resize: none;
  border: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 6px 8px;
  background-color: transparent;
  font-family: "IBM Plex Sans",sans-serif;
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="pbl-textarea-wrapper"
      name="textarea"
      rows="3"
      width="500"
    >
      <textarea
        class="c2"
        data-testid="pbl-textarea"
        id="custom-id"
        rows="3"
      />
    </div>
  </div>
</div>
`;

exports[`Show error when an error message is given 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
  margin-top: 4px;
  color: #F21D0D;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #00000040;
  border-radius: 8px;
  background-color: #ffffff;
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  border-color: #F21D0D;
  width: 500px;
}

.c1:focus {
  box-shadow: 0 0 0 3px #FFE7E5;
}

.c2 {
  box-sizing: border-box;
  resize: none;
  border: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 6px 8px;
  background-color: transparent;
  font-family: "IBM Plex Sans",sans-serif;
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="pbl-textarea-wrapper"
      name="textarea"
      rows="3"
      width="500"
    >
      <textarea
        class="c2"
        data-testid="pbl-textarea"
        id="custom-id"
        rows="3"
      >
        some
      </textarea>
    </div>
    <p
      class="c3"
      data-testid="pbl-textarea-infotext"
    >
      Something 
      <strong>
        terrible
      </strong>
       happened!
    </p>
  </div>
</div>
`;

exports[`Show infotext when available 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.75rem;
  line-height: 1.5em;
  margin-bottom: 0;
  margin-top: 4px;
  color: #00000080;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #00000040;
  border-radius: 8px;
  background-color: #ffffff;
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 500px;
}

.c2 {
  box-sizing: border-box;
  resize: none;
  border: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 6px 8px;
  background-color: transparent;
  font-family: "IBM Plex Sans",sans-serif;
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      data-testid="pbl-textarea-wrapper"
      name="textarea"
      rows="3"
      width="500"
    >
      <textarea
        class="c2"
        data-testid="pbl-textarea"
        id="custom-id"
        rows="3"
      >
        some
      </textarea>
    </div>
    <p
      class="c3"
      data-testid="pbl-textarea-infotext"
    >
      Something that 
      <strong>
        helps
      </strong>
    </p>
  </div>
</div>
`;

exports[`Show label when available 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.4em;
  font-weight: 500;
  margin-bottom: 0.75em;
  margin-bottom: 6px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #00000040;
  border-radius: 8px;
  background-color: #ffffff;
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 500px;
}

.c3 {
  box-sizing: border-box;
  resize: none;
  border: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 6px 8px;
  background-color: transparent;
  font-family: "IBM Plex Sans",sans-serif;
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <label
      data-testid="pbl-textarea-label"
      for="custom-id"
    >
      <p
        class="c1"
      >
        Your 
        <strong>
          name
        </strong>
      </p>
    </label>
    <div
      class="c2"
      data-testid="pbl-textarea-wrapper"
      name="textarea"
      rows="3"
      width="500"
    >
      <textarea
        class="c3"
        data-testid="pbl-textarea"
        id="custom-id"
        rows="3"
      >
        some
      </textarea>
    </div>
  </div>
</div>
`;
